--- a/Web/Views/Docs/dataProviders/LocalDataProvider.cshtml
+++ b/Web/Views/Docs/dataProviders/LocalDataProvider.cshtml
@@ -31,8 +31,10 @@ angular.module("myApp").controller("myController", function ($scope, lgLocalData
 
 <h4>HTML</h4>
 <pre highlight="html">
-&lt;lg-grid model="localDataProvider.getGridModel()"&gt;
-	&lt;lg-column title="'ID'"&gt;{{ rowData.id }}&lt;/lg-column&gt;
-	&lt;lg-column title="'Name'"&gt;{{ rowData.name }}&lt;/lg-column&gt;
-&lt;/lg-grid&gt;
+&lt;table lg-grid model="localDataProvider.getGridModel()"&gt;
+	&lt;tr lg-row&gt;
+		&lt;td&gt;{{ row.data.id }}&lt;/td&gt;
+		&lt;td&gt;{{ row.data.name }}&lt;/td&gt;
+	&lt;/tr&gt;
+&lt;/table&gt;
 </pre>
