--- a/Web/Views/Docs/lightGrid/lgGrid.cshtml
+++ b/Web/Views/Docs/lightGrid/lgGrid.cshtml
@@ -2,7 +2,7 @@
 
 <p>
 	The <code>lgGrid</code> is the main directive. It is used to define a grid. Configuration is done via its child directives.
-	It can be used either as a custom tag or on a <code>table</code> tag.
+	The <code>lgGrid</code> directive may be placed as an attribute on any element (though it will usually be a <code>table</code>).
 </p>
 
 <h3>Attributes</h3>
