--- a/Web/Views/Home/Demos.cshtml
+++ b/Web/Views/Home/Demos.cshtml
@@ -3,7 +3,7 @@
 }
 <h1>Demos</h1>
 
-<p>The fastest way to get going - copy from the source, paste to your project.</p>
+<p>See how it works live!</p>
 
 <div class="row" ng-app="lightGridSamples">
 	<div class="col-md-3">
