--- a/Web/Views/Home/Index.cshtml
+++ b/Web/Views/Home/Index.cshtml
@@ -10,7 +10,7 @@
 	</p>
 	<p>
 		<a class="btn btn-primary" href="@Url.Action("Overview")">See overview &raquo;</a>
-		<a class="btn btn-success" href="https://github.com/michaldudak/light-grid/releases/latest" target="_blank">Download the latest version &raquo;</a>
+		<a class="btn btn-success" href="https://github.com/michaldudak/light-grid/releases/download/v0.3.0/light-grid.0.3.0.zip" download>Download the latest version &raquo;</a>
 	</p>
 </div>
 
