--- a/Web/Views/Home/Overview.cshtml
+++ b/Web/Views/Home/Overview.cshtml
@@ -3,8 +3,8 @@
 }
 <h1>Overview</h1>
 <p>
-	Light Grid is a simple, lightweight grid build for Angular JS. Currently (as of 0.1 version) it supports client-side operations only,
-	but its architecture allows to author extensions with ease. Out-of-the-box server operations support is planned for the 0.2 release.
+	Light Grid is a simple, lightweight grid build for Angular JS. Currently (as of 0.3 version) is supports both client-side and server-side operations.
+	Its architecture allows to author extensions with ease.
 </p>
 <p>Take a look at the @Html.ActionLink("demos", "Demos", "Home") to see it in action.</p>
 
