--- a/Web/Views/Docs/controls/lgSwitchView.cshtml
+++ b/Web/Views/Docs/controls/lgSwitchView.cshtml
@@ -10,43 +10,45 @@
 <h3>Attributes</h3>
 <table class="table table-striped">
 	<thead>
-	<tr>
-		<th>Attribute</th>
-		<th>Type</th>
-		<th>Description</th>
-	</tr>
+		<tr>
+			<th>Attribute</th>
+			<th>Type</th>
+			<th>Description</th>
+		</tr>
 	</thead>
 	<tbody>
-	<tr>
-		<td>view (or lg-switch-view)</td>
-		<td>string</td>
-		<td>Name of the view to switch to.</td>
-	</tr>
-	<tr>
-		<td>provider</td>
-		<td>data provider</td>
-		<td>A reference to a data provider this control will communicate with.</td>
-	</tr>
+		<tr>
+			<td>view (or lg-switch-view)</td>
+			<td>string</td>
+			<td>Name of the view to switch to.</td>
+		</tr>
+		<tr>
+			<td>provider</td>
+			<td>data provider</td>
+			<td>A reference to a data provider this control will communicate with.</td>
+		</tr>
 	</tbody>
 </table>
 
 <h3>Examples</h3>
 <pre highlight="html">
-&lt;lg-grid model="dataProvider.getGridModel()"&gt;
-	&lt;lg-column title="'Name'"&gt;
-		&lt;div lg-view&gt;{{ rowData.name }}&lt;/div&gt;
-		&lt;div lg-view="edit"&gt;
-			&lt;input ng-model="viewData.name" /&gt;
-		&lt;/div&gt;
-	&lt;/lg-column&gt;
-	&lt;lg-column&gt;
-		&lt;div lg-view&gt;
-			&lt;button lg-switch-view="edit"&gt;Edit&lt;/button&gt;
-		&lt;/div&gt;
-		&lt;div lg-view="edit"&gt;
-			&lt;button lg-persist-data provider="dataProvider"&gt;Save&lt;/button&gt;
-			&lt;button lg-switch-view="read"&gt;Cancel&lt;/button&gt;
-		&lt;/div&gt;
-	&lt;/lg-column&gt;
-&lt;/lg-grid&gt;
+&lt;table lg-grid model="dataProvider.getGridModel()"&gt;
+	&lt;tr lg-row&gt;
+		&lt;td&gt;
+			&lt;div lg-view&gt;{{ row.data.name }}&lt;/div&gt;
+			&lt;div lg-view="edit"&gt;
+				&lt;input ng-model="row.viewModel.name" /&gt;
+			&lt;/div&gt;
+		&lt;/td&gt;
+		&lt;td&gt;
+			&lt;div lg-view&gt;
+				&lt;button lg-switch-view="edit"&gt;Edit&lt;/button&gt;
+			&lt;/div&gt;
+			&lt;div lg-view="edit"&gt;
+				&lt;button lg-persist-data provider="dataProvider"&gt;Save&lt;/button&gt;
+				&lt;button lg-switch-view="read"&gt;Cancel&lt;/button&gt;
+			&lt;/div&gt;
+		&lt;/td&gt;
+	&lt;/tr&gt;
+&lt;/table&gt;
 </pre>
