Updated the grid to 0.4.0-wip and modified the paging sample

--- a/Web/Views/Demos/clientSidePaging.cshtml
+++ b/Web/Views/Demos/clientSidePaging.cshtml
@@ -34,6 +34,8 @@
 	</table>
 
 	<lg-pager data-provider="dataProvider"></lg-pager>
+
+	<lg-page-size-options data-provider="dataProvider" options="[5, 10, 15, 30]"></lg-page-size-options>
 </div>
 
 <source-display></source-display>
