--- a/Web/Views/Demos/clientSidePaging.cshtml
+++ b/Web/Views/Demos/clientSidePaging.cshtml
@@ -9,7 +9,7 @@
 		}
 
 		$scope.dataProvider = lgLocalDataProviderFactory.create(model);
-		$scope.dataProvider.limitTo(15);
+		$scope.dataProvider.setPageSize(15);
 	}
 </script>
 
