--- a/Web/Views/Demos/fullyFeaturedLocal.cshtml
+++ b/Web/Views/Demos/fullyFeaturedLocal.cshtml
@@ -1,7 +1,7 @@
 ﻿<script>
 	function everythingLocalController($scope, $http, lgLocalDataProviderFactory) {
 		$scope.dataProvider = lgLocalDataProviderFactory.create([]);
-		$scope.dataProvider.limitTo(10);
+		$scope.dataProvider.setPageSize(5);
 
 		$scope.$watch("filterExpression", function () {
 			$scope.dataProvider.filter($scope.filterExpression);
@@ -66,7 +66,7 @@
 		<tbody>
 			<tr lg-row-start>
 				<td>
-					<lg-view>
+					<lg-view view="default">
 						{{ row.data.city }}
 					</lg-view>
 					<lg-view view="edit">
@@ -75,7 +75,7 @@
 				</td>
 
 				<td>
-					<lg-view>
+					<lg-view view="default">
 						{{ row.data.state }}
 					</lg-view>
 					<lg-view view="edit">
@@ -84,7 +84,7 @@
 				</td>
 
 				<td>
-					<lg-view>
+					<lg-view view="default">
 						{{ row.data._id }}
 					</lg-view>
 					<lg-view view="edit">
@@ -93,7 +93,7 @@
 				</td>
 
 				<td>
-					<lg-view>
+					<lg-view view="default">
 						{{ row.data.loc[0] | number }}
 					</lg-view>
 					<lg-view view="edit">
@@ -102,7 +102,7 @@
 				</td>
 
 				<td>
-					<lg-view>
+					<lg-view view="default">
 						{{ row.data.loc[1] | number }}
 					</lg-view>
 					<lg-view view="edit">
@@ -111,7 +111,7 @@
 				</td>
 
 				<td>
-					<lg-view>
+					<lg-view view="default">
 						{{ row.data.pop }}
 					</lg-view>
 					<lg-view view="edit">
@@ -119,15 +119,14 @@
 					</lg-view>
 				</td>
 
-				<td style="width: 200px; text-align: right;">
-					<div lg-view>
-						<button class="btn btn-default btn-sm" lg-switch-view="edit">Edit</button>
-						<button class="btn btn-default btn-sm" lg-toggle-expanded-row="detailsTemplate.html">Details</button>
+				<td class="controls">
+					<div lg-view="default" class="btn-group">
+						<button class="btn btn-default btn-sm" lg-switch-view="edit" title="Edit"><i class="fa fa-fw fa-pencil-square-o"></i></button>
+						<button class="btn btn-default btn-sm" lg-toggle-expanded-row="detailsTemplate.html" title="Map"><i class="fa fa-fw fa-map"></i></button>
 					</div>
-					<div lg-view="edit">
-						<button class="btn btn-primary btn-sm" lg-persist-data data-provider="dataProvider">Save</button>
-						<button class="btn btn-default btn-sm" lg-switch-view="read">Cancel</button>
-						<button class="btn btn-default btn-sm" lg-toggle-expanded-row>Details</button>
+					<div lg-view="edit" class="btn-group">
+						<button class="btn btn-primary btn-sm" lg-persist-data data-provider="dataProvider" title="Save"><i class="fa fa-fw fa-check"></i></button>
+						<button class="btn btn-warning btn-sm" lg-switch-view="default" title="Cancel"><i class="fa fa-fw fa-times"></i></button>
 					</div>
 				</td>
 			</tr>
@@ -138,6 +137,8 @@
 	</table>
 
 	<lg-pager data-provider="dataProvider"></lg-pager>
+
+	<pre>{{ dataProvider.getGridModel() | json}}</pre>
 </div>
 
 <source-display></source-display>
