--- a/Web/Views/Home/Index.cshtml
+++ b/Web/Views/Home/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@{
+@{
 	ViewBag.Title = "Lightweight customizable grid for Angular JS";
 }
 
@@ -8,9 +8,10 @@
 	<p class="lead">
 		Light Grid is a simple to use grid component for <a href="http://angularjs.org">Angular JS</a>. It's designed with extensibility and ease of customization in mind.
 	</p>
+	<p>Compatible with Angular JS up to 1.6</p>
 	<p>
 		<a class="btn btn-primary" href="@Url.Action("Overview")">See overview &raquo;</a>
-		<a class="btn btn-success" href="https://github.com/michaldudak/light-grid/releases/download/v0.3.0/light-grid.0.3.0.zip" download>Download the latest version &raquo;</a>
+		<a class="btn btn-success" href="https://github.com/michaldudak/light-grid/releases/download/v1.0.0-rc1/light-grid.1.0.0-rc1.zip" download>Download the latest version &raquo;</a>
 	</p>
 </div>
 
