--- a/Web/Views/Home/Overview.cshtml
+++ b/Web/Views/Home/Overview.cshtml
@@ -1,9 +1,9 @@
-﻿@{
+@{
 	ViewBag.Title = "Overview";
 }
 <h1>Overview</h1>
 <p>
-	Light Grid is a simple, lightweight grid build for Angular JS. Currently (as of 0.3 version) is supports both client-side and server-side operations.
+	Light Grid is a simple, lightweight grid build for Angular JS. Currently it supports both client-side and server-side operations.
 	Its architecture allows to author extensions with ease.
 </p>
 <p>Take a look at the @Html.ActionLink("demos", "Demos", "Home") to see it in action.</p>
@@ -24,4 +24,9 @@
 	Light Grid was created with a simple principle in mind - a grid should just display data (in various formats).
 	Fetching objects from a remote server, paging, sorting, etc. should not be performed by a grid itself. That's why data providers were introduced.
 	Their job is to prepare data for the grid to display. This makes the code cleaner, and development is more fun.
+</p>
+
+<h2>Compatibility</h2>
+<p>
+	The current version of Light Grid has been tested with Angular versions 1.4 to 1.6. However it should also work with older versions of the framework.
 </p>
