--- a/Web/Views/Shared/_Layout.cshtml
+++ b/Web/Views/Shared/_Layout.cshtml
@@ -1,4 +1,4 @@
-﻿<!DOCTYPE html>
+<!DOCTYPE html>
 <html>
 	<head>
 		<meta charset="utf-8" />
@@ -54,9 +54,8 @@
 			<p>Using <a href="https://bootswatch.com/flatly">Flatly theme from Bootswatch</a>.</p>
 			<p>
 				<small>
-					Logo designed by <a href="http://karolinapacholczyk.pl">Karolina Pacholczyk</a> |
-					Website &copy; @DateTime.Now.Year - <a href="http://dudak.me">Michał Dudak</a> |
-					<a href="http://digitalcreations.pl">Digital Creations</a>
+					Logo designed by <a href="https://www.behance.net/KarolinaDudak">Karolina Dudak</a> |
+					Website &copy; @DateTime.Now.Year - <a href="http://dudak.me">Michał Dudak</a>
 				</small>
 			</p>
 		</footer>
